--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,9 +19,9 @@
 
     <fragment
         android:id="@+id/nav_slideshow"
-        android:name="com.example.navdrawer.ui.join_vote.SlideshowFragment"
+        android:name="com.example.navdrawer.ui.join_vote.join_vote"
         android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/join_vote" />
 
     <fragment
         android:id="@+id/nav_tools"
