--- a/app/src/main/res/layout/create_vote.xml
+++ b/app/src/main/res/layout/create_vote.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#30A9DE">
 
 
     <EditText
@@ -14,6 +15,8 @@
         android:layout_marginEnd="96dp"
         android:layout_marginRight="96dp"
         android:layout_weight="1"
+        android:background="#EFDC05"
+        android:bufferType="spannable"
         android:ems="10"
         android:text="투표 제목을 입력하세요"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,6 +30,7 @@
         android:layout_marginEnd="96dp"
         android:layout_marginRight="96dp"
         android:layout_weight="1"
+        android:background="#EFDC05"
         android:ems="10"
         android:text="투표 주제를 입력하세요"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,6 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="340dp"
+        android:background="#EFDC05"
         android:text="후보자 이메일 목록 등록하기"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.569"
@@ -52,6 +57,7 @@
         android:layout_marginLeft="21dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:background="#EFDC05"
         android:text="달력"
         app:layout_constraintBaseline_toBaselineOf="@+id/st_time"
         app:layout_constraintEnd_toStartOf="@+id/st_time"
@@ -65,6 +71,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:background="#EFDC05"
         android:text="시간"
         app:layout_constraintEnd_toStartOf="@+id/st_set_due"
         app:layout_constraintStart_toEndOf="@+id/st_month"
@@ -74,6 +81,7 @@
         android:id="@+id/st_set_due"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#EFDC05"
         android:text="달력/시간 확인"
         app:layout_constraintBaseline_toBaselineOf="@+id/st_time"
         app:layout_constraintEnd_toEndOf="parent"
@@ -89,6 +97,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:background="#EFDC05"
         android:text="달력"
         app:layout_constraintEnd_toStartOf="@+id/dt_time"
         app:layout_constraintHorizontal_chainStyle="packed"
@@ -102,6 +111,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:background="#EFDC05"
         android:text="시간"
         app:layout_constraintEnd_toStartOf="@+id/dt_set_due"
         app:layout_constraintStart_toEndOf="@+id/dt_month"
@@ -111,11 +121,11 @@
         android:id="@+id/dt_set_due"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#EFDC05"
         android:text="달력/시간 확인"
         app:layout_constraintBaseline_toBaselineOf="@+id/dt_time"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/dt_time" />
-
 
 
     <Button
@@ -123,6 +133,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="500dp"
+        android:background="#E53A40"
         android:text="투표 생성하기"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
