--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -79,7 +79,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/saveButton"
+            android:id="@+id/loginButton"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/contentsLayout"
