--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -37,8 +37,7 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_alignBaseline="@id/emailLabel"
-                    android:inputType="textPersonName"
-                    android:privateImeOptions="defaultInputmode=korean" />
+                    android:inputType="textPersonName" />
             </LinearLayout>
             <LinearLayout
                 android:orientation="horizontal"
@@ -60,7 +59,7 @@
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_alignBaseline="@id/pwLabel"
-
+                    android:inputType="textPassword"
 
                     />
             </LinearLayout>
