1. create vote 구현하였습니다. 아직 후보자 목록 추가 ui를 구성 못해서 샘플 후보자들만 직접 입력해 넣었습니다.

--- a/app/src/main/res/layout/create_vote.xml
+++ b/app/src/main/res/layout/create_vote.xml
@@ -141,11 +141,12 @@
         android:alpha="0.7"
         android:background="@color/colorAccent"
         android:text="투표 생성하기"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dt_time"
-        android:textStyle="bold"
-        />
+        app:layout_constraintVertical_bias="0.207" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
