--- a/app/src/main/res/layout/create_vote.xml
+++ b/app/src/main/res/layout/create_vote.xml
@@ -15,7 +15,7 @@
         android:bufferType="spannable"
         android:ems="10"
         android:gravity="center_horizontal"
-        android:text="투표 제목을 입력하세요"
+        android:hint="투표 제목을 입력하세요"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -30,7 +30,7 @@
         android:layout_marginTop="40dp"
         android:layout_weight="1"
         android:ems="10"
-        android:text="투표 주제를 입력하세요"
+        android:hint="투표 주제를 입력하세요"
         app:layout_constraintEnd_toEndOf="@+id/vote_title"
         app:layout_constraintStart_toStartOf="@+id/vote_title"
         app:layout_constraintTop_toBottomOf="@+id/vote_title"
@@ -46,7 +46,7 @@
         android:layout_marginTop="40dp"
         android:alpha="0.8"
         android:background="@color/colorbutton"
-        android:text="후보자 이메일 목록 등록하기"
+        android:hint="후보자 이메일 목록 등록하기"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/vote_title"
 
