--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,65 +3,71 @@
     android:layout_height="match_parent" >
 
 	<RelativeLayout
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:layout_margin="10dp"
-	    android:layout_centerInParent="true"
-	    android:background="#aaffffff"
-	    >
-	    <LinearLayout
-		    android:orientation="vertical"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:layout_alignParentLeft="true"
-		    android:layout_toLeftOf="@+id/loginButton"
-		    android:layout_margin="4dp"
-		    >
-		    <LinearLayout
-			    android:orientation="horizontal"
-			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"
-			    android:layout_margin="4dp"
-			    >
+		android:id="@+id/RL"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_centerInParent="true"
+		android:layout_marginStart="10dp"
+		android:layout_marginLeft="10dp"
+		android:layout_marginTop="10dp"
+		android:layout_marginEnd="10dp"
+		android:layout_marginRight="10dp"
+		android:layout_marginBottom="10dp"
+		android:background="#aaffffff">
+
+		<LinearLayout
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_alignParentLeft="true"
+			android:layout_margin="4dp"
+			android:layout_toLeftOf="@+id/loginButton"
+			android:orientation="vertical">
+
+			<LinearLayout
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_margin="4dp"
+				android:orientation="horizontal">
+
 				<TextView
 					android:id="@+id/usernameLabel"
-					android:text="사용자명 : "
-					android:textColor="#ff222222"
-					android:textSize="16sp"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					/>
+					android:text="이 메 일   : "
+					android:textColor="#ff222222"
+					android:textSize="16dp" />
 
 				<EditText
 					android:id="@+id/usernameInput"
-					android:layout_width="170dp"
+					android:layout_width="200dp"
 					android:layout_height="wrap_content"
 					android:layout_alignBaseline="@id/usernameLabel" />
 			</LinearLayout>
+
 			<LinearLayout
-			    android:orientation="horizontal"
-			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"
-			    android:layout_margin="4dp"
-			    >
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_margin="4dp"
+				android:orientation="horizontal">
+
 				<TextView
 					android:id="@+id/passwordLabel"
-					android:text="비밀번호 : "
-					android:textColor="#ff222222"
-					android:textSize="16dp"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					/>
+					android:text="비밀번호 : "
+					android:textColor="#ff222222"
+					android:textSize="16dp" />
 
 				<EditText
 					android:id="@+id/passwordInput"
-					android:layout_width="170dp"
+					android:layout_width="200dp"
 					android:layout_height="wrap_content"
-					android:layout_alignBaseline="@id/passwordLabel"
 					android:layout_below="@+id/usernameInput"
+					android:layout_alignBaseline="@id/passwordLabel"
 					android:inputType="textPassword" />
 			</LinearLayout>
 		</LinearLayout>
+
 		<Button
 			android:id="@+id/loginButton"
 			android:layout_width="100dp"
@@ -69,8 +75,29 @@
 			android:layout_alignParentRight="true"
 			android:layout_centerVertical="true"
 			android:layout_marginRight="4dp"
-			android:text="로그인"
-			/>
+			android:text="로 그 인" />
 	</RelativeLayout>
-	
+
+	<TextView
+		android:id="@+id/textView2"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_above="@id/RL"
+		android:layout_alignParentTop="true"
+		android:layout_centerHorizontal="true"
+		android:layout_marginTop="130dp"
+		android:text="BallotChain"
+		android:textColor="#FF3399FF"
+		android:textSize="35sp"
+		android:textStyle="bold" />
+
+	<Button
+		android:id="@+id/button"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_below="@id/RL"
+		android:layout_centerHorizontal="true"
+		android:layout_marginTop="60dp"
+		android:text="회원가입" />
+
 </RelativeLayout>
