1. 용현이형 스플래쉬 엑티비티 합쳤음
2. 후보자 등록시 뒤로가기 버튼 뻑나는거 수정했다.

3. 바텀 네비게이션 탭 이름들 바꿨다.

4. 프래그먼트 파일 이름들 수정 했다.

--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -10,7 +10,7 @@
         android:id="@+id/action_add"
         android:enabled="true"
         android:icon="@drawable/ic_menu_gallery"
-        android:title="회원가입"/>
+        android:title="투표 참여"/>
 
     <item
         android:id="@+id/action_setting"
