--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.navdrawer.ui.home.HomeFragment"
+        android:name="com.example.navdrawer.ui.create_account.createAccount_Fragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
@@ -19,13 +19,13 @@
 
     <fragment
         android:id="@+id/nav_slideshow"
-        android:name="com.example.navdrawer.ui.join_vote.join_vote"
+        android:name="com.example.navdrawer.ui.join_vote.joinVote_Fragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/join_vote" />
 
     <fragment
         android:id="@+id/nav_tools"
-        android:name="com.example.navdrawer.ui.votes_ended.ToolsFragment"
+        android:name="com.example.navdrawer.ui.seeThrough_vote.seeThrough_Fragment"
         android:label="@string/menu_tools"
         tools:layout="@layout/fragment_tools" />
 
