회원가입 Activity를 추가하여 앱 전체 Activity Architecture를 수정.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -92,12 +92,12 @@
 		android:textStyle="bold" />
 
 	<Button
-		android:id="@+id/button"
-		android:layout_width="wrap_content"
+		android:id="@+id/caButton"
+		android:layout_width="110dp"
 		android:layout_height="wrap_content"
 		android:layout_below="@id/RL"
 		android:layout_centerHorizontal="true"
-		android:layout_marginTop="60dp"
-		android:text="회원가입" />
+		android:layout_marginTop="70dp"
+		android:text="회 원 가 입" />
 
 </RelativeLayout>
