--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -92,7 +92,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView4"
+                    android:id="@+id/pwLabel2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -101,7 +101,7 @@
                     android:textSize="16sp" />
 
                 <EditText
-                    android:id="@+id/editText"
+                    android:id="@+id/pwInput2"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
