--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -3,14 +3,14 @@
     <item
         android:id="@+id/action_today"
         android:enabled="true"
-        android:icon="@drawable/ic_menu_camera"
+        android:icon="@drawable/ic_menu_share"
         android:title="투표 생성"/>
 
     <item
         android:id="@+id/action_add"
         android:enabled="true"
-        android:icon="@drawable/ic_menu_gallery"
-        android:title="회원가입"/>
+        android:icon="@drawable/ic_menu_send"
+        android:title="투표 참여"/>
 
     <item
         android:id="@+id/action_setting"
