투표결과조회 - title, logo 등 UI 일부 수정.

--- a/app/src/main/res/layout/activity_see_vote.xml
+++ b/app/src/main/res/layout/activity_see_vote.xml
@@ -4,19 +4,22 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <EditText
-        android:id="@+id/editText"
+    <TextView
+        android:id="@+id/title_seeVote"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="text"
-        android:text="http://www.kobis.or.kr/kobisopenapi/webservice/rest/boxoffice/searchDailyBoxOfficeList.json?key=430156241533f1d058c603178cc3ca0e&#38;targetDt=20120101" />
+        android:text="투표 결과 조회"
+        android:textAlignment="center"
+        android:textColor="#FF3399FF"
+        android:textSize="37sp"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="요청하기" />
+        android:text="1 위 는  ?"
+        android:textSize="18sp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
