--- a/app/src/main/res/layout/candidate_item.xml
+++ b/app/src/main/res/layout/candidate_item.xml
@@ -26,7 +26,7 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:padding="5dp"
-                app:srcCompat="@drawable/bc33" />
+                app:srcCompat="@drawable/symbol" />
 
             <LinearLayout
                 android:layout_width="match_parent"
