[UI] 버튼- 크기, 배경색상(로고색과 동일한 파란색) & 폰트색상(흰색) 업데이트.

--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -119,7 +119,10 @@
             android:layout_below="@+id/contentsLayout"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
-            android:text="가 입 하 기" />
+            android:background="#FF3399FF"
+            android:text="가 입 하 기"
+            android:textColor="#ffffff"
+            android:textStyle="bold" />
     </RelativeLayout>
 
     <Button
@@ -129,6 +132,9 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="83dp"
-        android:text="돌 아 가 기" />
+        android:background="#FF3399FF"
+        android:text="돌 아 가 기"
+        android:textColor="#ffffff"
+        android:textStyle="bold" />
 
 </RelativeLayout>
