--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,11 +26,14 @@
 
         <Button
             android:id="@+id/logoutButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="90dp"
+            android:layout_height="45dp"
+            android:layout_margin="20dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:text="로그아웃"
+            android:background="#FF3399FF"
+            android:text=" 로 그 아 웃 "
+            android:textColor="#ffffff"
             app:layout_constraintEnd_toEndOf="parent" />
     </FrameLayout>
 
