--- a/app/src/main/res/layout/create_vote.xml
+++ b/app/src/main/res/layout/create_vote.xml
@@ -24,6 +24,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/textView555"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="70dp"
+        android:text="투표 생성"
+        android:textColor="#FF3399FF"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView51"
@@ -33,7 +48,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginStart="30dp"
         android:layout_marginLeft="60dp"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="99dp"
         android:text="1. 투표 제목"
         android:textColor="#FF3399FF"
         android:textSize="15sp"
@@ -47,7 +62,7 @@
         android:id="@+id/vote_title"
         android:layout_width="350dp"
         android:layout_height="45dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="110dp"
         android:layout_weight="1"
         android:bufferType="spannable"
         android:ems="10"
@@ -67,8 +82,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginStart="30dp"
         android:layout_marginLeft="60dp"
-        android:layout_marginTop="145dp"
-        android:text="2. 이메일 입력"
+        android:layout_marginTop="165dp"
+        android:text="2. 이메일"
         android:textColor="#FF3399FF"
         android:textSize="15sp"
         android:textStyle="bold"
@@ -99,8 +114,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginStart="30dp"
         android:layout_marginLeft="60dp"
-        android:layout_marginTop="258dp"
-        android:text="3. 후보자 입력"
+        android:layout_marginTop="269dp"
+        android:text="3. 후보자"
         android:textColor="#FF3399FF"
         android:textSize="15sp"
         android:textStyle="bold"
@@ -113,7 +128,7 @@
         android:id="@+id/edit_candidates2"
         android:layout_width="350dp"
         android:layout_height="45dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="20dp"
         android:gravity="center_horizontal"
         android:hint="후보자들을 입력하세요"
         app:layout_constraintEnd_toEndOf="@+id/email_addr"
@@ -125,6 +140,7 @@
         android:id="@+id/linearLayout"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="@+id/email_addr"
         app:layout_constraintStart_toStartOf="@+id/email_addr"
@@ -132,33 +148,35 @@
 
         <Button
             android:id="@+id/AddCandidateButton2"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_width="60dp"
+            android:layout_height="30dp"
+            android:layout_marginRight="20dp"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:background="@color/colorPrimary"
+            android:background="#FF3399FF"
             android:text="추가하기"
-            android:textSize="20dp" />
+            android:textColor="#ffffff" />
 
         <Button
             android:id="@+id/DeleteButtonCandidates2"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_width="60dp"
+            android:layout_height="30dp"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:background="@color/colorPrimary"
+            android:background="#FF3399FF"
             android:text="삭제하기"
-            android:textSize="20dp" />
+            android:textColor="#ffffff" />
 
         <Button
             android:id="@+id/RegisterButtonCandidates2"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_width="60dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="20dp"
             android:layout_gravity="center"
             android:layout_weight="1"
             android:background="@color/colorAccent"
             android:text="등록하기"
-            android:textSize="20dp" />
+            android:textColor="#ffffff" />
 
 
     </LinearLayout>
